@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-30
-Date: 2009-06-..
+Date: 2009-07-..
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
