@@ -203,3 +203,5 @@
   to have src/UFsparse and src/CHOLMOD/Include on the include path.
   Maybe just those two should be added to the include path.
 
+
+- sparse.model.matrix( ~ -1 + ..)   *must* be made to work
