@@ -197,22 +197,26 @@
 \alias{\%*\%,diagonalMatrix,denseMatrix-method}
 \alias{\%*\%,diagonalMatrix,lgeMatrix-method}
 \alias{\%*\%,lgeMatrix,diagonalMatrix-method}
-
+\alias{crossprod,CsparseMatrix,diagonalMatrix-method}
+\alias{crossprod,diagonalMatrix,CsparseMatrix-method}
 \alias{crossprod,diagonalMatrix,dgeMatrix-method}
-\alias{crossprod,diagonalMatrix,lgeMatrix-method}
 \alias{crossprod,diagonalMatrix,diagonalMatrix-method}
+\alias{crossprod,diagonalMatrix,lgeMatrix-method}
 \alias{crossprod,diagonalMatrix,matrix-method}
 \alias{crossprod,diagonalMatrix,missing-method}
 \alias{crossprod,diagonalMatrix,sparseMatrix-method}
 \alias{crossprod,sparseMatrix,diagonalMatrix-method}
-\alias{tcrossprod,diagonalMatrix,diagonalMatrix-method}
-\alias{tcrossprod,diagonalMatrix,sparseMatrix-method}
-\alias{tcrossprod,diagonalMatrix,matrix-method}
-\alias{tcrossprod,matrix,diagonalMatrix-method}
+\alias{tcrossprod,CsparseMatrix,diagonalMatrix-method}
 \alias{tcrossprod,dgeMatrix,diagonalMatrix-method}
-\alias{tcrossprod,lgeMatrix,diagonalMatrix-method}
+\alias{tcrossprod,diagonalMatrix,CsparseMatrix-method}
+\alias{tcrossprod,diagonalMatrix,diagonalMatrix-method}
+\alias{tcrossprod,diagonalMatrix,matrix-method}
 \alias{tcrossprod,diagonalMatrix,missing-method}
+\alias{tcrossprod,diagonalMatrix,sparseMatrix-method}
+\alias{tcrossprod,lgeMatrix,diagonalMatrix-method}
+\alias{tcrossprod,matrix,diagonalMatrix-method}
 \alias{tcrossprod,sparseMatrix,diagonalMatrix-method}
+
 \alias{solve,diagonalMatrix,Matrix-method}
 \alias{solve,diagonalMatrix,matrix-method}
 \alias{solve,diagonalMatrix,missing-method}
